# ChangeLog for dev-perl/Try-Tiny
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Try-Tiny/ChangeLog,v 1.64 2014/02/25 20:49:43 maekke Exp $

  25 Feb 2014; Markus Meier <maekke@gentoo.org> Try-Tiny-0.190.0.ebuild:
  add ~arm, bug #501346

  24 Feb 2014; Mikle Kolyada <zlogene@gentoo.org> Try-Tiny-0.190.0.ebuild:
  Add ~mips keyword wrt bug #501346

  23 Feb 2014; Naohiro Aota <naota@gentoo.org> Try-Tiny-0.190.0.ebuild:
  Add ~x86-fbsd wrt bug #501346

  22 Feb 2014; Markus Meier <maekke@gentoo.org> Try-Tiny-0.180.0.ebuild:
  arm stable, bug #495496

  20 Feb 2014; Akinori Hattori <hattya@gentoo.org> Try-Tiny-0.180.0.ebuild:
  ia64 stable wrt bug #495496

  18 Feb 2014; Jeroen Roovers <jer@gentoo.org> Try-Tiny-0.180.0.ebuild:
  Stable for HPPA (bug #495496).

*Try-Tiny-0.190.0 (15 Feb 2014)

  15 Feb 2014; Tim Harder <radhermit@gentoo.org> +Try-Tiny-0.190.0.ebuild:
  Version bump.

  01 Feb 2014; Mike Frysinger <vapier@gentoo.org> Try-Tiny-0.120.0.ebuild,
  Try-Tiny-0.160.0.ebuild, Try-Tiny-0.180.0.ebuild:
  Add arm64 love.

  05 Jan 2014; Markos Chandras <hwoarang@gentoo.org> Try-Tiny-0.180.0.ebuild:
  Add ~mips

  05 Sep 2013; Mike Frysinger <vapier@gentoo.org> Try-Tiny-0.160.0.ebuild,
  Try-Tiny-0.180.0.ebuild:
  Restore s390 KEYWORDS #479612.

*Try-Tiny-0.180.0 (26 Aug 2013)

  26 Aug 2013; Patrick Lauer <patrick@gentoo.org> +Try-Tiny-0.180.0.ebuild:
  Bump

  06 Aug 2013; Patrick Lauer <patrick@gentoo.org> Try-Tiny-0.160.0.ebuild:
  QA: Drop ~s390 keyword until dev-perl/Sub-Name catches up

*Try-Tiny-0.160.0 (03 Aug 2013)

  03 Aug 2013; Matt Turner <mattst88@gentoo.org> +Try-Tiny-0.160.0.ebuild:
  Version bump to 0.160.0.

  02 Apr 2013; Agostino Sarubbo <ago@gentoo.org> Try-Tiny-0.120.0.ebuild:
  Stable for s390, wrt bug #457318

  02 Apr 2013; Agostino Sarubbo <ago@gentoo.org> Try-Tiny-0.120.0.ebuild:
  Stable for hppa, wrt bug #457318
