@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/File-Temp
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Temp/ChangeLog,v 1.63 2014/02/02 00:00:42 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Temp/ChangeLog,v 1.64 2014/02/28 15:11:43 zlogene Exp $
+
+  28 Feb 2014; Mikle Kolyada <zlogene@gentoo.org> File-Temp-0.230.100.ebuild,
+  File-Temp-0.230.400.ebuild:
+  Bump to EAPI=5
 
   02 Feb 2014; Mike Frysinger <vapier@gentoo.org> File-Temp-0.220.0.ebuild,
   File-Temp-0.230.100.ebuild, File-Temp-0.230.400.ebuild:
