@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Try-Tiny
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Try-Tiny/ChangeLog,v 1.64 2014/02/25 20:49:43 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Try-Tiny/ChangeLog,v 1.65 2014/02/28 15:05:16 zlogene Exp $
+
+  28 Feb 2014; Mikle Kolyada <zlogene@gentoo.org> Try-Tiny-0.180.0.ebuild:
+  x86 stable wrt bug #495496
 
   25 Feb 2014; Markus Meier <maekke@gentoo.org> Try-Tiny-0.190.0.ebuild:
   add ~arm, bug #501346
